tests/snapshots/enums__handle_and_enum__ls-targets_es-minwin_-cs-minwin_rustcasing.snap
---
source: tests/enums.rs
expression: bo.bindings
---
#![allow(
    non_snake_case,
    non_upper_case_globals,
    non_camel_case_types,
    clippy::upper_case_acronyms
)]
::windows_targets::link!(
    "user32.dll" "system" "GetMessageW" fn get_message_w(lp_msg : * mut Msg, h_wnd :
    Hwnd, w_msg_filter_min : u32, w_msg_filter_max : u32) -> Bool
);
::windows_targets::link!(
    "user32.dll" "system" "SetWindowPos" fn set_window_pos(h_wnd : Hwnd,
    h_wnd_insert_after : Hwnd, x : i32, y : i32, cx : i32, cy : i32, u_flags :
    SetWindowPosFlags::Enum) -> Bool
);
pub type Bool = i32;
pub type Hwnd = isize;
pub const HwndNotopmost: Hwnd = -2;
pub type Lparam = isize;
#[repr(C)]
pub struct Msg {
    pub hwnd: Hwnd,
    pub message: u32,
    pub w_param: Wparam,
    pub l_param: Lparam,
    pub time: u32,
    pub pt: Point,
}
#[repr(C)]
pub struct Point {
    pub x: i32,
    pub y: i32,
}
pub mod SetWindowPosFlags {
    pub type Enum = u32;
}
pub type Wparam = usize;

